--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "从零搭建脚手架",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
