--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/inter727/webpack-demo#readme",
   "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.4",
     "autoprefixer": "^9.6.0",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
