--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.5.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.4",
     "autoprefixer": "^9.6.0",
@@ -38,5 +39,8 @@
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
