--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15"
   }
