--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.0",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
