--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --config ./build/webpack.prod.js",
+    "build:dll": "webpack --config ./build/webpack.dll.js",
     "dev": "webpack-dev-server --config ./build/webpack.dev.js"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.4",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
